Sun Jan 19 15:03:13 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * websvcs/lib/Makefile:
          Set the correct x_BUILD_DLL defines. These are needed for the
          Cygwin/MingW and Kylix compiler.

Sat Jan 18 17:49:20 2003  Steve Huston  <shuston@riverace.com>

        * Makefile: Removed PACE references.

Sat Jan 18 17:11:21 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/make_release: Use doxygen 1.2.18 as opposed to doxygen
	  1.2.13.1.

Fri Jan 17 09:00:17 2003  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ACE-INSTALL.html (make): Removed all claims that we support
	  SunC++ 4.2.  Thanks to Kirat Singh <kirat.singh@gs.com> for
	  reporting this.

Sat Jan 18 09:07:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Makefile.DLL_Test:
        * tests/Makefile.Framework_Component_DLL:
        * tests/Makefile.Service_Config_DLL:
        * examples/Service_Configurator/IPC-tests/server/Makefile:
          Set the correct x_BUILD_DLL defines. These are needed for the
          Cygwin/MingW and Kylix compiler.

Fri Jan 17 12:34:51 2003  Steve Huston  <shuston@riverace.com>

        * ACE-INSTALL.html: Updated platform and compiler information.

Thu Jan 16 19:06:19 2003  Stephen Torri <storri@cse.wustl.edu>

        * ace/OS.cpp:
        * ace/config-linux-common.h:
        * ace/config-freebsd.h:
        * ace/README:

          Added a new macro called ACE_HAS_PTHREAD_SETSTACK for systems
 	  that use the newer glibc (2.3+). Eliminates linker warning about
 	  not using the pthread function called pthread_setstack.

Thu Jan 16 16:25:45 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/auto_run_tests.lst: Added a TAO/orbsvcs/tests/EC_MT_Mcast
	  test to the daily builds.

Thu Jan 16 12:27:24 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* COPYING: Extended the validity of the copyright notice from 2002